--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "author": "xianort",
   "license": "MIT",
-  "packageManager": "pnpm@10.9.0+sha512.0486e394640d3c1fb3c9d43d49cf92879ff74f8516959c235308f5a8f62e2e19528a65cdc2a3058f587cde71eba3d5b56327c8c33a97e4c4051ca48a10ca2d5f",
+  "packageManager": "npm@11.3.0+sha512.96eb611483f49c55f7fa74df61b588de9e213f80a256728e6798ddc67176c7b07e4a1cfc7de8922422cbce02543714367037536955221fa451b0c4fefaf20c66",
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
     "parcel": "^2.14.4",
